--- a/package.yaml
+++ b/package.yaml
@@ -66,3 +66,12 @@ executables:
   sim-ffi-sdl:
     <<: *ffi
     main: sim-ffi-sdl.hs
+
+  sim-verilator:
+    source-dirs:
+      - sim
+    main: sim-verilator.hs
+    extra-libraries: stdc++ 
+    extra-lib-dirs: verilator
+    ghc-options: -fPIC -pgml g++ -optl-Wl,--allow-multiple-definition -optl-Wl,--whole-archive -optl-Wl,-Bstatic -optl-Wl,-Lverilator -optl-Wl,-lVerilatorFFI -optl-Wl,-Bdynamic -optl-Wl,--no-whole-archive
+    
