Add Verilator-backed Haskell simulator

--- a/verilator/Makefile
+++ b/verilator/Makefile
@@ -1,5 +1,5 @@
 CPPFLAGS	= $(shell pkg-config --cflags verilator) -I_verilator-lib
-CXXFLAGS	= -fPIC
+CXXFLAGS	= -fPIC -O3
 VERILATOR_OBJS	= _verilator-exe/verilated.o
 VERILATOR_LIBS	= _verilator-lib/VBounce__ALL.a
 
@@ -10,7 +10,7 @@ clean:
 
 .PHONY: all clean
 
-VerilatorFFI.o: VerilatorFFI.cpp VerilatorFFI.h
+VerilatorFFI.o: VerilatorFFI.cpp VerilatorFFI.h VerilatorAPI.h
 
 libVerilatorFFI.a: VerilatorFFI.o $(VERILATOR_OBJS) $(VERILATOR_LIBS)
 	rm -f $@
