--- a/package.yaml
+++ b/package.yaml
@@ -70,8 +70,11 @@ executables:
   sim-verilator:
     source-dirs:
       - sim
+      - verilator
     main: sim-verilator.hs
     extra-libraries: stdc++ 
     extra-lib-dirs: verilator
     ghc-options: -fPIC -pgml g++ -optl-Wl,--allow-multiple-definition -optl-Wl,--whole-archive -optl-Wl,-Bstatic -optl-Wl,-Lverilator -optl-Wl,-lVerilatorFFI -optl-Wl,-Bdynamic -optl-Wl,--no-whole-archive
     
+    build-tools: hsc2hs
+    include-dirs: verilator
