--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "retroclash-lib"]
 	path = retroclash-lib
 	url = git@github.com:gergoerdi/retroclash-lib.git
+[submodule "retroclash-sim"]
+	path = retroclash-sim
+	url = git@github.com:gergoerdi/retroclash-sim.git
