--- a/package.yaml
+++ b/package.yaml
@@ -76,7 +76,12 @@ executables:
     main: sim-verilator.hs
     extra-libraries: stdc++ 
     extra-lib-dirs: verilator
-    ghc-options: -fPIC -pgml g++ -optl-Wl,--allow-multiple-definition -optl-Wl,--whole-archive -optl-Wl,-Bstatic -optl-Wl,-Lverilator/_build -optl-Wl,-lVerilatorFFI -optl-Wl,-Bdynamic -optl-Wl,--no-whole-archive
+    ghc-options:
+        -fPIC
+        -pgml g++
+        -optl-Wl,--allow-multiple-definition -optl-Wl,--whole-archive
+        -optl-Wl,-Bstatic -optl-Wl,-L_build/verilator -optl-Wl,-lVerilatorFFI -optl-Wl,-Bdynamic
+        -optl-Wl,--no-whole-archive
     
     build-tools: hsc2hs
     include-dirs: verilator
